# robokitty

./: .env.template  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.toml  config.toml.master  config.toml.template  input_script.json  test_script.json
docs/: CONCEPTS.md  CONFIGURATION.md  USAGE_GUIDE.md
src/: app_config.rs  lib.rs  lock.rs  main.rs  telegram_bot.rs
src/commands/: cli.rs  common.rs  mod.rs  telegram.rs
src/core/: budget_system.rs  file_system.rs  mod.rs  reporting.rs  state.rs
src/core/models/: common.rs  epoch.rs  mod.rs  proposal.rs  raffle.rs  team.rs  vote.rs
src/core/progress/: mod.rs  raffle.rs
src/services/: ethereum.rs  mod.rs  telegram.rs
