[package]
name = "robokitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", features = ["ipc"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
dotenvy = "0.15"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
sha2 = "0.10.8"