[package]
name = "robokitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ethers = { version = "2", features = ["ipc"] }
tokio = { version = "1", features = ["full", "test-util"] }
dotenvy = "0.15"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
sha2 = "0.10.8"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "serde"] }
mockall = "0.12"
prettytable = "0.10"
config = "0.14"